@@ -16,6 +16,7 @@ Verilator 5.025 devel
 * Support __en/__out signals on top level inout ports (#4812) (#4856). [Paul Wright]
 * Fix consecutive zero-delays (#5038). [Krzysztof Bieganski, Antmicro Ltd.]
 * Fix `$system` with string argument (#5042).
+* Fix width extension on delays (#5045).
 
 
 Verilator 5.024 2024-04-05
